<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ch.tower</groupId>
    <artifactId>mc_tower</artifactId>
    <version>1.0.0</version>

    <name>Tower</name>
    <description>A simple tower mini-game on minecraft 1.19.3</description>

    <properties>
        <maven.compiler.source>19</maven.compiler.source>
        <maven.compiler.target>19</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mainClass>ch.tower.Main</mainClass>
        <!-- Your custom system path access to the file server_mc/plugins -->
        <!-- i.e: F:\Programme if your plugins folder is here F:\Programme\server_mc\plugins -->
        <output>${user.home}\Desktop</output>
    </properties>

    <repositories>
        <repository>
            <id>dev-mc</id>
            <url>https://www.skyblockv4.fr/nexus/repository/dev-mc/</url>
        </repository>
    </repositories>

    <dependencies>
        <!--This adds the Paper API artifact to the build -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>Spigot</artifactId>
            <version>1.19.3</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>ch.luca008</groupId>
            <artifactId>SpigotApi</artifactId>
            <version>latest</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-shade-plugin</artifactId>
            <version>3.4.1</version>
            <type>maven-plugin</type>
            <exclusions>
                <!-- exclude the vulnerable import -->
                <exclusion>
                    <groupId>commons-io</groupId>
                    <artifactId>commons-io</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>commons-collections</groupId>
                    <artifactId>commons-collections</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.apache.maven.shared</groupId>
                    <artifactId>maven-shared-utils</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- import fixed versions of these libs -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.7</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>4.4</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven.shared</groupId>
            <artifactId>maven-shared-utils</artifactId>
            <version>3.3.4</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.4.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <shadedArtifactAttached>true</shadedArtifactAttached>
                    <shadedClassifierName>shaded</shadedClassifierName>
                    <outputDirectory>${output}\server_mc\plugins</outputDirectory>
                </configuration>
            </plugin>
        </plugins>
        <sourceDirectory>src/main/java</sourceDirectory>
        <defaultGoal>clean package</defaultGoal>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>plugin.yml</include>
                </includes>
            </resource>
        </resources>
    </build>

</project>